lectures: force order using file names
Jekyll 4 would support manual order but Jekyll 3 does not yet

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ incremental: true
 collections:
   lectures:
     output: true
+# Jekyll 4 supports an order attribute here, Jekyll 3 relies on file names
+# only
+#   order:
+#     - 00-AlbertEinsteint/index.d
