add comment about Jekyll version used by GitHub

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ collections:
   lectures:
     output: true
 # Jekyll 4 supports an order attribute here, Jekyll 3 relies on file names
-# only
+# only. Github (2021-04-20) uses 3.9. See: https://pages.github.com/versions/
 #   order:
 #     - 00-AlbertEinsteint/index.d
